# ygm

./: .clang-format  .cmake-format.py  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  LICENSE-MIT  Readme.md  catalyst321-MPI_test_reduci-95781.core
.github/workflows/: ci-test.yaml  clang-format.yaml
cmake/: FindArrowParquet.cmake  FindPython3Module.cmake  FindSphinx.cmake  PythonUtilities.cmake  cerealConfig.cmake.in  ygmConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
docs/rtd/: CMakeLists.txt  api.rst  conf.py  dev.rst  getting_started.rst  index.rst  requirements.txt
docs/rtd/ygm/: comm.rst  container.rst
docs/rtd/ygm/container/: array.rst  bag.rst  counting_set.rst  disjoint_set.rst  map.rst  multimap.rst  multiset.rst  set.rst
examples/: CMakeLists.txt  alg_pagerank.cpp  alg_spmv.cpp  arrow_parquet_stream_io.cpp  arrow_parquet_stream_reader.cpp  bag_gather.cpp  bag_insert_rate.cpp  bandwidth_check.cpp  disjoint_set_async_union_and_execute.cpp  disjoint_set_spanning_tree.cpp  hello_world.cpp  howdy_lance.cpp  howdy_world.cpp  howdy_world_recursive.cpp  init_test.cpp  lambda_optional_arguments.cpp  large_message.cpp  map_insert_if_missing.cpp  map_set.cpp  map_visit.cpp  map_visit_optional_arguments.cpp  maptrix_spmv_int.cpp  maptrix_spmv_str.cpp  maptrix_visit.cpp  multimap_visit_group.cpp  random_spanning_trees.cpp  read_trace.cpp  reddit_pagerank.cpp  webgraph_spmv.cpp  word_counter.cpp
examples/container/: CMakeLists.txt  alg_pagerank.cpp  bag_filter.cpp  bag_gather.cpp  counting_set_topk.cpp  disjoint_set_async_union_and_execute.cpp  disjoint_set_cc.cpp  disjoint_set_spanning_tree.cpp  map_insert_if_missing.cpp  map_set.cpp  map_visit.cpp  map_visit_optional_arguments.cpp  map_visit_optional_arguments_legacy.cpp  multimap_visit_group.cpp  word_counter.cpp
examples/io/: CMakeLists.txt  arrow_parquet_stream_reader.cpp  arrow_parquet_stream_reader_json.cpp  arrow_parquet_stream_reader_variant.cpp  parquet_stream_reader.cpp  parquet_stream_reader_json.cpp  parquet_stream_reader_variant.cpp
include/ygm/: collective.hpp  comm.hpp  for_all.hpp  for_all_adapter.hpp  random.hpp  stats_tracker.hpp  utility.hpp  version.hpp
include/ygm/algorithms/: spmv.hpp
include/ygm/algorithms/detail/: spmv_impl.hpp
include/ygm/container/: array.hpp  assoc_vector.hpp  bag.hpp  bag_orig.hpp  container_traits.hpp  counting_set.hpp  disjoint_set.hpp  map.hpp  maptrix.hpp  reduce_by_key.hpp  reducing_adapter.hpp  set.hpp  tagged_bag.hpp
include/ygm/container/detail/: adj_impl.hpp  array.ipp  array_impl.hpp  assoc_vector_impl.hpp  bag.ipp  bag_impl.hpp  bag_orig.ipp  base_async_contains.hpp  base_async_erase.hpp  base_async_exe_if_contains.hpp  base_async_insert.hpp  base_async_insert_contains.hpp  base_async_insert_or_assign.hpp  base_async_insert_value.hpp  base_async_reduce.hpp  base_async_visit.hpp  base_batch_erase.hpp  base_concepts.hpp  base_count.hpp  base_iteration.hpp  base_iteration_tools.hpp  base_misc.hpp  block_partitioner.hpp  container_traits.hpp  csc_impl.hpp  csr_impl.hpp  disjoint_set_impl.hpp  filter_proxy.hpp  flatten_proxy.hpp  hash_partitioner.hpp  map.ipp  map_impl.hpp  map_proxy.hpp  maptrix_impl.hpp  reducing_adapter.hpp  round_robin_partitioner.hpp  set.ipp  set_impl.hpp  transform_proxy.hpp  type_traits.hpp
include/ygm/container/experimental/: maptrix.hpp
include/ygm/detail/: assert.hpp  byte_vector.hpp  cereal_boost_container.hpp  cereal_boost_json.hpp  comm.ipp  comm_environment.hpp  comm_impl.hpp  comm_router.hpp  comm_stats.hpp  constexpr_enumerator.hpp  constexpr_key_map.hpp  distributed_string_enumeration.hpp  distributed_string_literal_map.hpp  hash.hpp  interrupt_mask.hpp  lambda_compliance.hpp  lambda_map.hpp  layout.hpp  mpi.hpp  random.hpp  sample.hpp  send_buffer_manager.hpp  std_traits.hpp  string_enumerator.hpp  string_literal_map.hpp  tracer.hpp  tracing.hpp  ygm_cereal_archive.hpp  ygm_ptr.hpp  ygm_traits.hpp
include/ygm/detail/meta/: functional.hpp  template.hpp
include/ygm/io/: arrow_parquet_parser.hpp  csv_parser.hpp  daily_output.hpp  line_parser.hpp  multi_output.hpp  ndjson_parser.hpp  parquet2json.hpp  parquet2variant.hpp  parquet_parser.hpp
include/ygm/io/detail/: arrow_parquet_json_converter.hpp  arrow_parquet_variant_converter.hpp  csv.hpp  parquet2json.hpp  (+1 more)
include/ygm/meta/: functional.hpp
include/ygm/random/: alias_table.hpp  multi_alias_table.hpp  random.hpp
performance/: CMakeLists.txt  counter_scaling_test.cpp  disjoint_set_union_chain.cpp
test/: CMakeLists.txt  test_alias_table.cpp  test_array.cpp  test_arrow_parquet_stream_reader.cpp  test_arrow_parquet_stream_reader_json.cpp  test_bag.cpp  test_barrier.cpp  test_byte_vector.cpp  test_cereal_archive.cpp  test_cereal_boost_container.cpp  test_cereal_boost_json.cpp  test_collective.cpp  test_comm.cpp  test_comm_2.cpp  test_concepts.cpp  test_container_serialization.cpp  test_container_traits.cpp  test_counting_set.cpp  test_csv_headers.cpp  test_csv_parser.cpp  test_daily_output.cpp  test_disjoint_set.cpp  test_gather_topk.cpp  test_interrupt_mask.cpp  test_large_messages.cpp  test_layout.cpp  test_line_parser.cpp  test_map.cpp  test_multi_output.cpp  test_multimap.cpp  test_multiset.cpp  test_ndjson_parser.cpp  test_parquet_reader.cpp  test_parquet_reader_json.cpp  test_random.cpp  test_recursion_large_messages.cpp  test_recursion_progress.cpp  test_reduce.cpp  test_reduce_by_key.cpp  test_reducing_adapter.cpp  (+5 more)
test/data/: 100.csv  3.ndjson  README.md  csv_headers.csv  loremipsum_large.txt  short.txt
test/data/loremipsum/: loremipsum_0.txt  loremipsum_1.txt  loremipsum_2.txt  loremipsum_3.txt  loremipsum_4.txt
test/data/parquet_files/: file_part_1_of_4.parquet  file_part_2_of_4.parquet  file_part_3_of_4.parquet  file_part_4_of_4.parquet
test/data/parquet_files2/: data.parquet
test/data/parquet_files_different_sizes/: 0.parquet  1.parquet  4.parquet  5.parquet  6.parquet
test/data/parquet_files_json/: data.parquet
tools/: CMakeLists.txt  parquet_tools.cpp  parquet_tools_subcmd.json
(+9 files in other folders)
